# sapat

./: .env.example  .gitignore  README.md  pyproject.toml  sample.txt  script.py
.devcontainer/: devcontainer.json
sapat.egg-info/: PKG-INFO
